# weatherr

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  result.json  result.txt
src/: cli.rs  main.rs  report.rs
